# tallystick

./: .travis.yml  Cargo.toml  README.md  stv_new.rs.back
.github/: dependabot.yml
benches/: benchmark.rs
src/: approval.rs  borda.rs  condorcet.rs  errors.rs  irv.rs  lib.rs  plurality.rs  quota.rs  result.rs  schulze.rs  score.rs  stv.rs  traits.rs  util.rs  votetree.rs
