[package]
name = "tallystick"
version = "0.3.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "tallystick is a rust library for talling votes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/tallystick"
readme = "README.md"
keywords = ["voting", "vote", "election", "tally", "ballot"]
categories = ["science"]

[badges]
travis-ci = { repository = "phayes/tallystick", branch = "master" }
codecov = { repository = "phayes/tallystick", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = []
nightly = []
rational = ["num-rational"]

[package.metadata.docs.rs]
features = ["nightly", "rational"]

[dependencies]
failure = "0.1.6"
petgraph = {default-features = false, version = "0.5.0"}
derive_more = "0.99.3"
num-traits = "0.2.11"
num-rational = {optional = true, version = "0.2.3"}
hashbrown = "0.7.0"
partial-min-max = "0.4"

[dev-dependencies]
criterion = "0.2"
rand = "0.7.3"
maplit = "1.0.2"

[[bench]]
name = "benchmark"
harness = false

